# cicd-pipeline

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  cal.c  cal.h  main.c  test_cal.c
.github/workflows/: create_github_release.yml  deploy.yml  develop_deploy.yml  develop_test.yml  lint.yml  main_deploy.yml  test.yml
